# DiPECS

./: .env.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/aios-adapter/: Cargo.toml
crates/aios-adapter/src/: lib.rs
crates/aios-adapter/tests/: collection_stats_test.rs
crates/aios-agent/: Cargo.toml
crates/aios-agent/src/: lib.rs  main.rs  router.rs
crates/aios-agent/tests/: baseline_comparison_test.rs  cloud_accuracy_test.rs  mock_cloud_proxy_test.rs
docs/: api-index.html  book.toml  hooks_dot.py  mkdocs.yml  pyproject.toml  rustdoc-custom.css
docs/academic-src/: dipecs-report-preamble.tex  refs.bib
docs/academic-src/01_Survey_Report/: main.tex
docs/academic-src/02_Feasibility_Report/: main.tex
docs/academic-src/03_Midterm_Report/: main.tex
docs/academic-src/04_Final_Report/: main.tex
docs/slides/midterm/: slides.md
docs/src/: SUMMARY.md  index.md  introduction.md
docs/src/academic/: index.md
docs/src/android/: real-device-validation.md
docs/src/architecture/: cloud-llm.md  decision-routing.md  index.md  model-memory.md  philosophy.md
docs/src/current/: runtime.md
docs/src/design/: android-action-boundary.md  android-action-implementation.md  android-interface-mvp.md  android-real-device-validation.md  android-security-privacy.md  crates-map.md  daemon-architecture.md  overview.md  philosophy.md  states.md
docs/src/evaluation/: academic-baseline-comparison.md  action-benefit-coverage.md  baseline-framework.md  (+5 more)
docs/templates/: index.html
tests/integration/: Cargo.toml  action_success_rate.rs  cloud_llm_stability.rs  helpers.rs  main.rs  noop_coverage.rs  policy_denial.rs  rationale_coverage.rs  routing_strategy.rs  signature_cross_verify.rs  window_size.rs
(+389 files in other folders)
