[package]
name = "aios-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aios-spec = { workspace = true }
# aios-core = { workspace = true }
# aios-kernel = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
# tracing-subscriber = { workspace = true }
libc = { workspace = true }
# anyhow = { workspace = true }
thiserror = { workspace = true }
